hphp/test/zend/bad/ext/standard/tests/array/var_export.php
<?php
$a = (object) array (1, 3, "foo" => "bar");
var_export($a);
?>